# user-management-service

./: .env  .gitignore  Cargo.toml  README.md  config.toml.sample
.github/workflows/: tests.yml
game-library-common/src/: discourse.rs  extract.rs  signature.rs
migrations/: 20240229142901_initial.sql  20250609210853_add_sessions_table.sql
src/: app.rs  auth_provider.rs  avatar.rs  config.rs  core.rs  db.rs  discourse.rs  errors.rs  extractors.rs  handlers.rs  jwt.rs  jwt_provider.rs  main.rs  model.rs  prod_core.rs  search.rs  signature.rs  sqlite.rs  sso.rs
src/discourse/: login.rs  sso.rs
user-management-service/: Cargo.toml
user-management-service/src/: errors.rs  extractors.rs  handlers.rs  main.rs  prod_core.rs  sqlite.rs
user-management-service/src/discourse/: sso.rs
