[package]
name = "ums"
version = "0.1.0"
authors = ["Joel Uckelman <uckelman@nomic.net>"]
description = "Vassal User Management Service"
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum-extra = { version = "^0.9", features = ["cookie"] }
axum = { version = "^0.7", features = ["http1", "http2", "json", "macros", "query", "tokio"] }
base64 = "^0.22"
chrono = "^0.4"
const_format = "^0.2"
digest = { version = "^0.10", features = ["mac"] }
hex = "^0.4"
hmac = "^0.12"
jsonwebtoken = "^9"
mime = "^0.3"
rand = "^0.8"
reqwest = { version = "^0.12", features = ["cookies", "json"] }
serde_json = "^1"
serde_urlencoded = "^0.7"
serde = { version = "^1", features = ["derive"] }
sha2 = "^0.10"
sqlx = { version = "^0.7", features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
thiserror = "^1"
tokio = { version = "^1", features = ["full"] }
toml = "^0.8"
tower-http = { version = "^0.5", features = ["cors"] }
tower = { version = "^0.4", features = ["buffer", "limit"] }
urlencoding = "^2"
unwrap-infallible = "0.1.5"
once_cell = "1.19.0"

[dev-dependencies]
time = "^0.3"
wiremock = "^0.6"
