[package]
name = "ums"
version = "0.1.0"
authors = ["Joel Uckelman <uckelman@nomic.net>"]
description = "Vassal User Management Service"
license = "GPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1"
axum-extra = { version = "^0.10", features = ["cookie", "typed-header"] }
axum = { version = "^0.8", features = ["http1", "http2", "json", "macros", "query", "tokio"] }
base64 = "^0.22"
chrono = "^0.4"
const_format = "^0.2"
digest = { version = "^0.10", features = ["mac"] }
hex = "^0.4"
hmac = "^0.12"
itertools = "^0.14"
jsonwebtoken = "^9"
mime = "^0.3"
once_cell = "^1.19"
rand = "^0.9"
reqwest = { version = "^0.12", features = ["cookies", "json"] }
serde_json = "^1"
serde_urlencoded = "^0.7"
serde = { version = "^1", features = ["derive"] }
sha2 = "^0.10"
sqlx = { version = "^0.8", features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
thiserror = "^2"
time = "^0.3"
tokio = { version = "^1", features = ["full"] }
toml = "^0.8"
tower-http = { version = "^0.6", features = ["cors", "timeout", "trace"] }
tower = { version = "^0.5", features = ["buffer", "limit", "util"] }
tracing = "^0.1"
tracing-appender = "^0.2"
tracing-panic = { version = "^0.1", features = ["capture-backtrace"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
unwrap-infallible = "^0.1"
urlencoding = "^2"

[dev-dependencies]
wiremock = "^0.6"
