[package]
name = "ums"
version = "0.1.0"
authors = ["Joel Uckelman <uckelman@nomic.net>"]
description = "Vassal User Management Service"
license = "GPL-3.0-or-later"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
axum-extra = { version = "0.12", features = ["cookie", "typed-header"] }
axum = { version = "0.8", features = ["http1", "http2", "json", "macros", "query", "tokio"] }
base64 = "0.22"
chrono = "0.4"
const_format = "0.2"
digest = { version = "0.11", features = ["mac"] }
#glc = { path = "../game-library-common" }
glc = { git = "https://github.com/vassalengine/game-library-common.git" }
hex = "0.4"
hmac = "0.13"
itertools = "0.15"
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
mime = "0.3"
rand = "0.10"
reqwest = { version = "0.13", features = ["cookies", "json"] }
serde_json = "1"
serde_urlencoded = "0.7"
serde = { version = "1", features = ["derive"] }
sha2 = "0.11"
sqlx = { version = "0.9", features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
thiserror = "2"
time = "0.3"
tokio = { version = "1", features = ["full"] }
toml = "1.0"
tower = { version = "0.5", features = ["limit", "util"] }
tower-http = { version = "0.7", features = ["cors", "timeout", "trace"] }
tracing = "0.1"
urlencoding = "2"

[dev-dependencies]
wiremock = "0.6"
